Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -159,7 +159,6 @@ input[type=submit],
 }
 
 .widget .extendednavigation ul {
-	text-align: center;
 	background-color: rgba(1, 1, 1, 0.05);
 }
 .widget .extendednavigation li > .text,
